Modify tab content in index.html
Updated the content of the second tab to reflect 'Aprobación de Aprendices'.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
 
       <div id="tab2" class="tab-content">
-        <h3>Aprendices Ficha</h3>
+        <h3>Aprobación de Aprendices</h3>
         <iframe title="FASES DE FICHAS"
                 src="https://app.powerbi.com/view?r=eyJrIjoiNTdlNDgwYjEtOTA2YS00YjllLWIxYjMtZGQ1NjY0ZTJjNTg4IiwidCI6ImNiYzJjMzgxLTJmMmUtNGQ5My05MWQxLTUwNmM5MzE2YWNlNyIsImMiOjR9" frameborder="0"
                 allowFullScreen="true">
@@ -189,4 +189,5 @@
 
 </body>
 </html>
+
 
