--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
       </div>
 
       <div id="tab2" class="tab-content">
-        <h3>Aprobación de Aprendices</h3>
-        <iframe title="FASES DE FICHAS"
+        <h3>Aprendices Ficha</h3>
+        <iframe title="Aprobación de Aprendices"
                 src="https://app.powerbi.com/view?r=eyJrIjoiNTdlNDgwYjEtOTA2YS00YjllLWIxYjMtZGQ1NjY0ZTJjNTg4IiwidCI6ImNiYzJjMzgxLTJmMmUtNGQ5My05MWQxLTUwNmM5MzE2YWNlNyIsImMiOjR9" frameborder="0"
                 allowFullScreen="true">
         </iframe>
@@ -189,5 +189,6 @@
 
 </body>
 </html>
+
 
 
