--- a/index.html
+++ b/index.html
@@ -143,11 +143,17 @@
       <div class="tab-buttons">
         <button class="tab-link active" onclick="openTab(event, 'tab1')">🎥 Ultimo Video</button>
         <button class="tab-link" onclick="openTab(event, 'tab2')">📊 Como Vamos</button>
+        <button class="tab-link" onclick="openTab(event, 'tab3')">📅📊 Gant Evidencias</button>
       </div>
 
       <div id="tab1" class="tab-content active">
         <h3>Ultima Sesión Sincrónica</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/UFKJ_1lE79o?si=AJ3KmN40mtdWfAVp" title="La ciencia de las cosas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+
+      <div id="tab3" class="tab-content active">
+        <h3>Ultima Sesión Sincrónica</h3>
+        <iframe title="GANT 3118490" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMzRhYTZmZjgtOTNhOC00YjkyLWE0ZTQtMmI1MTEzYTI4Yzg5IiwidCI6ImNiYzJjMzgxLTJmMmUtNGQ5My05MWQxLTUwNmM5MzE2YWNlNyIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
       </div>
 
       <div id="tab2" class="tab-content">
@@ -189,6 +195,7 @@
 
 </body>
 </html>
+
 
 
 
