--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </div>
 
       <div id="tab3" class="tab-content active">
-        <h3>Ultima Sesión Sincrónica</h3>
+          <h3>Gant Evidencia</h3>
         <iframe title="GANT 3118490" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMzRhYTZmZjgtOTNhOC00YjkyLWE0ZTQtMmI1MTEzYTI4Yzg5IiwidCI6ImNiYzJjMzgxLTJmMmUtNGQ5My05MWQxLTUwNmM5MzE2YWNlNyIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
       </div>
 
@@ -195,6 +195,7 @@
 
 </body>
 </html>
+
 
 
 
